--- a/serverless.yml
+++ b/serverless.yml
@@ -93,7 +93,7 @@ functions:
     handler: lambdas/endpoints/sendEmail.handler
     events:
       - http:
-          path: sendEmail
+          path: send-email
           method: POST
           cors: true
 
